--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
-  "homepage": "https://nelsong1997.github.io/portfolio",
+  "homepage": "https://nelsong1997.github.io/portfolio/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
